// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots active default first 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      I'm active
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    I'm active
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 3
  </button>
</div>
`;

exports[`Storyshots active explicit first 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      I'm active
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    I'm active
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 3
  </button>
</div>
`;

exports[`Storyshots active explicit second 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      I'm active
    </div>
  </div>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 1
  </button>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    I'm active
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 3
  </button>
</div>
`;

exports[`Storyshots active explicit third 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      I'm active
    </div>
  </div>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 1
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    I'm active
  </button>
</div>
`;

exports[`Storyshots dynamic options sizes correctly 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      Orange
    </div>
  </div>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Apple
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Banana
  </button>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    Orange
  </button>
</div>
`;

exports[`Storyshots onSelect handles click 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      Option 1
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    Option 1
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 3
  </button>
</div>
`;

exports[`Storyshots options count dynamic 1`] = `
Array [
  <div
    data-css-13xtft9=""
    role="radiogroup"
  >
    <div
      aria-hidden={true}
      data-css-w8tgx1=""
      style={Object {}}
    >
      <div
        data-css-1jyyyen=""
      >
        item: 
        1
      </div>
    </div>
    <button
      aria-selected={true}
      data-css-kcifgk=""
      onClick={[Function]}
      role="radio"
    >
      item: 
      1
    </button>
    <button
      aria-selected={false}
      data-css-gogiqb=""
      onClick={[Function]}
      role="radio"
    >
      item: 
      2
    </button>
  </div>,
  <div
    data-css-18ma6i3=""
  >
    <button
      disabled={false}
      onClick={[Function]}
    >
      remove
    </button>
    <button
      disabled={false}
      onClick={[Function]}
    >
      add
    </button>
  </div>,
]
`;

exports[`Storyshots options count more than max 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      Option 1
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    Option 1
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 3
  </button>
</div>
`;

exports[`Storyshots options count one 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      The Only Option
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    The Only Option
  </button>
</div>
`;

exports[`Storyshots options count three 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      Option 1
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    Option 1
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 3
  </button>
</div>
`;

exports[`Storyshots options count two 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      Option 1
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    Option 1
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
</div>
`;

exports[`Storyshots text length all long 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      This one is really long because everyone likes those
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    This one is really long because everyone likes those
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    This one is really long because everyone likes those
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    This one is really long because everyone likes those
  </button>
</div>
`;

exports[`Storyshots text length differing lengths 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      This one is really long because everyone likes those
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    This one is really long because everyone likes those
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    This is medium
  </button>
  <button
    aria-selected={false}
    data-css-gogiqb=""
    onClick={[Function]}
    role="radio"
  >
    Short
  </button>
</div>
`;
